# HqeKV

./: README.md  eval_long_bench.py  pred_long_bench_hq.py  pyproject.toml  requirements.txt
config/: Llama-3.1-8B-Instruct_325.yaml  model2maxlen.json  ratios.json
model/: llama_hqe.py  llama_hqe_2.py  llama_kivi.py  llama_ratio_search.py  llama_zipcache.py  modeling_llama.py  modeling_qwen3.py  public_func.py  qwen3_hqe.py  qwen3_kivi.py  qwen3_ratio_search.py  qwen3_zipcache.py
quant/: cuda_hq_test.py  hqe.py  hqe_1.py  hqe_2.py  hqe_matmul.py  hqe_outlier.py  hybrid_quant.py  hybrid_quant_matmul_test.py  hybrid_quant_outlier.py  matmul.py  pack_unpack.py  quant_matmul_hq.py  setup.py  speed_test.py
quant/csrc/: gemv_cuda.h  gemv_cuda_normal.cu  gemv_cuda_normal_outlier.cu  gemv_cuda_uniform.cu  gemv_cuda_uniform_outlier.cu  gemv_cuda_wv_normal.cu  gemv_cuda_wv_normal_outlier.cu  gemv_cuda_wv_uniform.cu  gemv_cuda_wv_uniform_outlier.cu  pybind.cpp  reduce_utils.h
tests/: Optuna_test.py
utils/: metrics.py  process_args_hq.py
